<resources>
    <string name="app_name">My Application</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="button_calculator">Calculator</string>
    <string name="button_label_six">6</string>
    <string name="button_label_five">5</string>
    <string name="button_label_three">3</string>
    <string name="button_label_one">1</string>
    <string name="button_label_two">2</string>
    <string name="button_label_seven">7</string>
    <string name="button_label_eight">8</string>
    <string name="button_label_nine">9</string>
    <string name="button_label_four">4</string>
    <string name="button_label_equals">=</string>
    <string name="button_label_cero">0</string>
    <string name="button_label_plus">+</string>
    <string name="button_label_division">/</string>
    <string name="button_label_multiply">*</string>
    <string name="button_label_rest">-</string>
    <string name="button_label_dot">.</string>
    <string name="button_label_spaces">...</string>
    <string name="button_label_neg">NEG</string>
</resources>
