<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_horizontal">

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/button_label_spaces"
        app:layout_constraintBaseline_toBaselineOf="@+id/newNumber"
        app:layout_constraintEnd_toStartOf="@+id/newNumber" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_one"
        app:layout_constraintStart_toStartOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_two"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonOne"
        app:layout_constraintStart_toEndOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_three"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonTwo"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_four"
        app:layout_constraintStart_toStartOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_five"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonFour"
        app:layout_constraintStart_toEndOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_six"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonFive"
        app:layout_constraintStart_toEndOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:text="@string/button_label_seven"
        app:layout_constraintStart_toStartOf="@+id/newNumber"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_eight"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSeven"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_nine"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEight"
        app:layout_constraintStart_toEndOf="@+id/buttonEight" />

    <Button
        android:id="@+id/buttonCero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_cero"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintStart_toEndOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_equals"
        app:layout_constraintStart_toStartOf="@+id/buttonOne"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_plus"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
        app:layout_constraintStart_toEndOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_division"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonNine"
        app:layout_constraintStart_toEndOf="@+id/buttonNine" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_multiply"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSix"
        app:layout_constraintStart_toEndOf="@+id/buttonSix" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_rest"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonThree"
        app:layout_constraintStart_toEndOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="48dp"
        android:text="@string/button_label_dot"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCero"
        app:layout_constraintStart_toEndOf="@+id/buttonCero" />

</android.support.constraint.ConstraintLayout>